Resolved spacing, changed tabs, resolved printing

--- a/src/shared/layouts/Default/layout.css
+++ b/src/shared/layouts/Default/layout.css
@@ -31,7 +31,7 @@ button {
   font-weight: normal;
   line-height: 28px;
   color: #666a80;
-  margin-bottom: 32px;
+  margin-bottom: 20px;
 }
 
 a:hover {
